# des-deterministic-code-poc

./: .gitignore  README.md  nx.json  package.json  tsconfig.base.json
.claude/: settings.json
.nx/cache/: .tsbuildinfo  run.json
.nx/cache/terminalOutputs/: 1152325130814763031  6739092948157555971  68472783485583135  7832916869903238827  9775659295376267073
.nx/workspace-data/: 28168bd2-6b5c-4dda-b603-c748a0a02149-v2.db  file-map.json  jest-7930610538513362720.hash  lockfile-dependencies.hash  nx_files.nxt  parsed-lock-file.dependencies.json  parsed-lock-file.nodes.json  playwright-5186013267177752385.hash  project-graph.json  source-maps.json  storybook-2067268139142663047.hash  vite-9347777721732807074.hash  vitest-7333614714660744029.hash
apps/mcp-orchestrator/: jest.config.cts  project.json  tsconfig.app.json
apps/mcp-orchestrator/src/: README.md  main.ts
apps/mcp-orchestrator/src/tools/: get-component-ast-schema.ts  get-component-schema.spec.ts  (+5 more)
apps/web-consumer/: index.html  project.json  vite.config.mts
apps/web-consumer-e2e/: playwright.config.ts  project.json
python-ast-engine/: _test_button.json  generate.py  pyproject.toml
python-ast-engine/ast_engine/: engine.py  models.py  nodes.py
python-ast-engine/tests/: test_engine.py
python-react-engine/: _test_modal.json  generate.py  pyproject.toml
python-react-engine/react_engine/: builder.py  engine.py  models.py  renderer.py  validator.py
python-react-engine/tests/: test_engine.py
scripts/: inspect-mcp.js
testing/: variation-1.json  variation-2.json  variation-3.json
(+5 files in other folders)
