[project]
name = "python-ast-engine"
version = "0.1.0"
description = "Deterministic React TSX code generator driven by MCP component schemas"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.coverage.run]
source = ["ast_engine"]
